Fixed spacing issue on mobile

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -13,7 +13,7 @@
   .rankingItems{
     display: flex;
     justify-content: space-between;
-    padding-right: 40px;
+    padding-right: 20px;
   }
 
 
